<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_padding"
    android:paddingLeft="@dimen/activity_horizontal_padding"
    android:paddingRight="@dimen/activity_horizontal_padding"
    android:paddingTop="@dimen/activity_vertical_padding"
    android:orientation="vertical"
    tools:context="com.example.owner.experimenttwo_2.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/title"
        android:textSize="@dimen/title_size"
        android:textColor="@color/black"/>

    <ImageView
        android:layout_width="@dimen/image_size"
        android:layout_height="@dimen/image_size"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/image_vertical_margin"
        android:layout_marginTop="@dimen/image_vertical_margin"
        android:src="@drawable/sysu"
        android:gravity="center"/>

    <android.support.design.widget.TextInputLayout
        style="@style/tablerow_style"
        android:id="@+id/more_username">
        <EditText
            style="@style/hint_style"
            android:hint="@string/user_hint"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        style="@style/tablerow_style"
        android:id="@+id/more_password">
        <EditText
            style="@style/hint_style"
            android:inputType="textPassword"
            android:hint="@string/pwd_hint"/>
    </android.support.design.widget.TextInputLayout>

    <RadioGroup
        style="@style/width_height"
        android:layout_marginTop="@dimen/radiobutton_vertical_margin"
        android:id="@+id/radioGroup"
        android:orientation="horizontal"
        android:gravity="center">

        <RadioButton
            style="@style/radiobutton_style"
            android:id="@+id/id1"
            android:text="@string/student"
            android:checked="true"/>
        <RadioButton
            style="@style/radiobutton_style"
            android:id="@+id/id2"
            android:text="@string/teacher"/>
        <RadioButton
            style="@style/radiobutton_style"
            android:id="@+id/id3"
            android:text="@string/association"/>
        <RadioButton
            style="@style/radiobutton_style"
            android:id="@+id/id4"
            android:text="@string/manager"/>
    </RadioGroup>

    <LinearLayout
        style="@style/width_height"
        android:layout_marginTop="@dimen/button_vertical_margin"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            style="@style/button_style"
            android:id="@+id/loginButton"
            android:text="@string/login"/>
        <Button
            style="@style/button_style"
            android:id="@+id/registerButton"
            android:text="@string/register"/>
    </LinearLayout>
</LinearLayout>
